# AIgriculture

./: .gitignore  CITATIONS.bib  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
backend/aigriculture/: __init__.py
backend/aigriculture/api/: __init__.py  app.py  jobs.py  runner.py  schemas.py
backend/aigriculture/api/routes/: __init__.py  envelope.py  health.py  jobs.py
backend/aigriculture/climate/: __init__.py
backend/aigriculture/crop_models/: __init__.py  weather.py  wofost_runner.py
backend/aigriculture/data/: __init__.py  aafc_aci.py  agera5.py  base.py  candcs_m6.py  soilgrids.py
backend/aigriculture/ml/: __init__.py
backend/aigriculture/suitability/: __init__.py  envelope.py  indicators.py  requirements.py
backend/aigriculture/uncertainty/: __init__.py
backend/aigriculture/validation/: __init__.py
backend/notebooks/exploratory/: README.md  quebec_aci_smoke_test.py  quebec_candcs_m6_smoke_test.py  quebec_gdd_smoke_test.py  quebec_soil_smoke_test.py  quebec_tier1_envelope.py  quebec_wofost_smoke_test.py
backend/tests/: conftest.py  test_aafc_aci.py  test_agera5.py  test_api.py  test_candcs_m6.py  test_data_base.py  test_soilgrids.py  test_suitability.py  test_wofost_runner.py
data/crops/: quebec_staples.yaml
docs/decisions/: 0001-language-and-stack.md  0002-primary-climate-data.md  0003-primary-crop-model.md  0004-compute-and-storage.md  0005-uncertainty-and-scenarios.md  0006-license.md  0007-gpu-and-ml-stack.md  README.md
docs/research/: 01-data-catalogue.md  02-crop-knowledge-base.md  03-methodology.md  04-uncertainty-and-validation.md  05-existing-tools-survey.md  README.md
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: BboxControl.tsx  MapView.tsx  ResultPanel.tsx  ScenarioControl.tsx
frontend/app/lib/: api.ts
