[project]
name = "aigriculture"
version = "0.0.0"
description = "Climate-adaptive crop recommendation tool: open data + climate projections + process-based and ML modeling."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Laurent Chauvin" },
]
requires-python = ">=3.11"

# Bare-package dependencies kept minimal. Heavy scientific stacks are pulled
# in via optional dependency groups so an exploratory clone is fast and the
# pieces relevant to each Phase can be installed individually.
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
# Phase 1 — exploratory analysis in notebooks.
research = [
    "jupyterlab>=4",
    "ipykernel>=6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
]

# Geospatial + climate / Earth-observation stack.
geo = [
    "xarray>=2024.3",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2",
    "pyproj>=3.6",
    "fiona>=1.9",
    "dask[distributed]>=2024.4",
    "zarr>=2.17",
    "netcdf4>=1.6",
    "h5netcdf>=1.3",
    "pyarrow>=15",
    "pystac-client>=0.7",
    "stackstac>=0.5",
    "planetary-computer>=1",
    "cdsapi>=0.7",
    "xclim>=0.48",
    "regionmask>=0.11",
    "earthengine-api>=0.1.400",
]

# Crop modeling.
crop = [
    "pcse>=5.5",
]

# Machine learning + GPU.
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2",
    "lightgbm>=4",
    # PyTorch with CUDA installed separately via uv pip / pip extra index URL.
]

# Backend API.
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2",
    "geoalchemy2>=0.14",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "arq>=0.25",
]

# Developer tooling.
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/aigriculture"]

# ---- Tooling ----

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",        # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "N",                  # pep8-naming
    "SIM",                # simplifications
    "C4",                 # comprehensions
    "TID",                # tidy imports
    "RUF",                # ruff-specific
]
ignore = ["E501"]         # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true   # many scientific libs lack stubs
plugins = []

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
